default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <description>Dummy object for Assignment 21</description>
    <label>Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>