default/objects/Application__c/fields/AIMS_Cycle__c.field-meta.xml
<CustomField>
    <fullName>AIMS_Cycle__c</fullName>
    <label>AIMS_Cycle</label>
    <length>80</length>
    <type>Text</type>
</CustomField>