default/objects/Application__c/fields/AIMS_Prime__c.field-meta.xml
<CustomField>
    <fullName>AIMS_Prime__c</fullName>
    <label>AIMS_Prime</label>
    <length>80</length>
    <type>Text</type>
</CustomField>