default/objects/Application__c/fields/Ammount__c.field-meta.xml
<CustomField>
    <fullName>Ammount__c</fullName>
    <label>Ammount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>