default/objects/Application__c/fields/Assay_Comments_or_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Assay_Comments_or_Guidance__c</fullName>
    <label>Assay_Comments_or_Guidance</label>
    <type>TextArea</type>
</CustomField>