default/objects/Application__c/recordTypes/Non_Draft.recordType-meta.xml
<RecordType>
    <fullName>Non_Draft</fullName>
    <active>true</active>
    <label>Non-Draft</label>
</RecordType>