default/objects/Application__c/validationRules/Ammount_greter_than_1000.validationRule-meta.xml
<ValidationRule>
    <fullName>Ammount_greter_than_1000</fullName>
    <active>false</active>
    <errorConditionFormula>Ammount__c &lt;1000 &amp;&amp;  NOT(ISNEW())</errorConditionFormula>
    <errorMessage>Ammount should not be &lt; 1000</errorMessage>
</ValidationRule>